--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/challenge_background"
     tools:context=".activity.ChallengeActivity">
 
     <include
@@ -24,6 +25,60 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         layout="@layout/activity_footer"/>
+
+    <LinearLayout
+        android:id="@+id/linear_coin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="150"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:paddingRight="2dp"/>
+
+        <ImageView
+            android:id="@+id/img_coin"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/coin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@id/linear_coin"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+
+        <ImageView
+            android:id="@+id/img_bonus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/eyes_bonus"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
