--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -26,6 +26,62 @@
         android:layout_alignParentBottom="true"
         layout="@layout/activity_footer"/>
 
+    <LinearLayout
+        android:id="@+id/linear_coin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="150"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:paddingRight="2dp"/>
+
+        <ImageView
+            android:id="@+id/img_coin"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/coin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@id/linear_coin"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+
+        <ImageView
+            android:id="@+id/img_bonus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/eyes_bonus"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/txt_game_mode"
         android:layout_width="match_parent"
@@ -49,6 +105,16 @@
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         />
+
+    <RelativeLayout
+        android:id="@+id/game_helper"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/header"
+        android:layout_margin="10dp">
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txt_num_level"
