--- a/app/src/main/res/layout/activity_game_mode.xml
+++ b/app/src/main/res/layout/activity_game_mode.xml
@@ -25,6 +25,62 @@
         android:layout_alignParentBottom="true"
         layout="@layout/activity_footer"/>
 
+    <LinearLayout
+        android:id="@+id/linear_coin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="150"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:paddingRight="2dp"/>
+
+        <ImageView
+            android:id="@+id/img_coin"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/coin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@id/linear_coin"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+
+        <ImageView
+            android:id="@+id/img_bonus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/eyes_bonus"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -79,7 +135,7 @@
             android:background="@drawable/primary_button"/>
 
         <TextView
-            android:id="@+id/btn_sudden_death"
+            android:id="@+id/btn_survival"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/btn_against_time"
@@ -89,24 +145,24 @@
             android:layout_marginEnd="@dimen/game_mode_btn_margin_start_end"
             android:layout_marginStart="@dimen/game_mode_btn_margin_start_end"
             android:layout_centerHorizontal="true"
-            android:text="@string/sudden_death"
+            android:text="@string/survival"
             android:fontFamily="@font/roof_runners_active"
             android:textColor="@color/whiteColor"
             android:textSize="@dimen/game_mode_btn_txt_fontsize"
             android:background="@drawable/primary_button"/>
 
         <TextView
-            android:id="@+id/btn_survival"
+            android:id="@+id/btn_sudden_death"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/btn_sudden_death"
+            android:layout_below="@id/btn_survival"
             android:padding="@dimen/game_mode_btn_padding"
             android:gravity="center"
             android:layout_marginTop="@dimen/game_mode_btn_margin_top"
             android:layout_marginEnd="@dimen/game_mode_btn_margin_start_end"
             android:layout_marginStart="@dimen/game_mode_btn_margin_start_end"
             android:layout_centerHorizontal="true"
-            android:text="@string/survival"
+            android:text="@string/sudden_death"
             android:fontFamily="@font/roof_runners_active"
             android:textColor="@color/whiteColor"
             android:textSize="@dimen/game_mode_btn_txt_fontsize"
