--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -25,6 +25,62 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
 
+    <LinearLayout
+        android:id="@+id/linear_coin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:paddingRight="2dp"/>
+
+        <ImageView
+            android:id="@+id/img_coin"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/coin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@id/linear_coin"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+
+        <ImageView
+            android:id="@+id/img_bonus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/eyes_bonus"/>
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -70,26 +126,4 @@
         android:layout_toEndOf="@id/btn_challenge"
         android:layout_marginBottom="10dp"
         android:background="@drawable/setting_card" />
-
-    <TextView
-        android:id="@+id/txt_coin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="150"
-        android:textColor="@color/yellowColor"
-        android:fontFamily="@font/roof_runners_active"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@id/img_background"
-        android:textSize="20sp"
-        android:padding="10dp"
-        android:layout_marginEnd="25dp"/>
-
-    <ImageView
-        android:layout_alignEnd="@id/img_background"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/coin"/>
-
 </RelativeLayout>
