Implementation of Shop Activity, Params Activity, Ads and database

--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -25,6 +25,380 @@
         android:layout_alignParentBottom="true"
         layout="@layout/activity_footer"/>
 
+    <LinearLayout
+        android:id="@+id/linear_coin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_coin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:paddingRight="2dp"/>
+
+        <ImageView
+            android:id="@+id/img_coin"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/coin"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linear_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@id/linear_coin"
+        android:layout_marginEnd="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txt_bonus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textColor="@color/whiteColor"
+            android:fontFamily="@font/roof_runners_active"
+            android:textSize="20sp"
+            android:padding="5dp"/>
+
+        <ImageView
+            android:id="@+id/img_bonus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/eyes_bonus"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_below="@id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/get_bonus_shop_activity"
+            android:textColor="@color/whiteColor"
+            android:textSize="20sp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/roof_runners_active"/>
+
+        <RelativeLayout
+            android:id="@+id/item1"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_bluedark"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/award1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="30sp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_toRightOf="@id/award1"
+                    android:background="@drawable/eyes_bonus"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+                <TextView
+                    android:id="@+id/price1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="25"
+                    android:textSize="25sp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_toRightOf="@id/price1"
+                    android:background="@drawable/coin"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/item2"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_bluedark"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/award2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="30sp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_toRightOf="@id/award2"
+                    android:background="@drawable/eyes_bonus"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+                <TextView
+                    android:id="@+id/price2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="100"
+                    android:textSize="25sp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_toRightOf="@id/price2"
+                    android:background="@drawable/coin"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/get_coin_shop_activity"
+            android:textColor="@color/whiteColor"
+            android:textSize="20sp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roof_runners_active"/>
+
+        <RelativeLayout
+            android:id="@+id/item3"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_bluedark"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/award3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="30sp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_toRightOf="@id/award3"
+                    android:background="@drawable/coin"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/application_ad"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/item4"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_bluedark"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/award4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="50"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="30sp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_toRightOf="@id/award4"
+                    android:background="@drawable/coin"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+                <TextView
+                    android:id="@+id/price4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3,99"
+                    android:textSize="25sp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"/>
+                <TextView
+                    android:layout_toRightOf="@id/price4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="20sp"
+                    android:text="€"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/item5"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:background="@drawable/rounded_bluedark"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="20dp">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_centerVertical="true">
+
+                <TextView
+                    android:id="@+id/award5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="100"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="30sp"
+                    android:layout_marginRight="10dp"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_toRightOf="@id/award5"
+                    android:background="@drawable/coin"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+                <TextView
+                    android:id="@+id/price5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="6,99"
+                    android:textSize="25sp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/roof_runners_active"
+                    android:textColor="@color/whiteColor"/>
+
+                <TextView
+                    android:layout_toRightOf="@id/price5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/whiteColor"
+                    android:textSize="20sp"
+                    android:text="€"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
