--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -112,6 +112,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/volume_ok"/>
                 <TextView
+                    android:id="@+id/setting_son_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_son"
@@ -151,6 +152,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/notification_ok"/>
                 <TextView
+                    android:id="@+id/setting_notif_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_notifications"
@@ -161,6 +163,7 @@
                     android:paddingLeft="10dp"
                     android:text="@string/setting_notifications"/>
                 <TextView
+                    android:id="@+id/setting_notif_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -189,6 +192,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/language"/>
                 <TextView
+                    android:id="@+id/setting_language_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_languages"
@@ -199,6 +203,7 @@
                     android:paddingLeft="10dp"
                     android:text="@string/setting_languages"/>
                 <TextView
+                    android:id="@+id/setting_language_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -234,6 +239,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/star"/>
                 <TextView
+                    android:id="@+id/setting_rate_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_rate_us"
@@ -262,6 +268,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/img_credit"/>
                 <TextView
+                    android:id="@+id/setting_credit_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_credit"
@@ -290,6 +297,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/send_button"/>
                 <TextView
+                    android:id="@+id/setting_report_bug_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_report_bug"
@@ -318,6 +326,7 @@
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/info"/>
                 <TextView
+                    android:id="@+id/setting_version_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@id/img_version"
@@ -343,6 +352,7 @@
     </ScrollView>
 
     <TextView
+        android:id="@+id/label_footer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
