--- a/app/src/main/res/layout/end_all_level.xml
+++ b/app/src/main/res/layout/end_all_level.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp">
             <TextView
-                android:id="@+id/label_score"
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
@@ -38,6 +38,7 @@
             android:textAlignment="center">
 
             <TextView
+                android:id="@+id/subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
@@ -94,13 +95,14 @@
                 android:background="@drawable/replay"/>
 
             <TextView
+                android:id="@+id/again_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
                 android:textColor="@color/whiteColor"
                 android:text="@string/label_btn_again"
                 android:layout_centerVertical="true"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@id/ico_replay"
                 android:layout_marginLeft="20dp"
                 />
@@ -121,13 +123,14 @@
                 android:background="@drawable/ico_menu"/>
 
             <TextView
+                android:id="@+id/menu_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
                 android:textColor="@color/whiteColor"
                 android:text="@string/label_btn_menu"
                 android:layout_centerVertical="true"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@id/ico_menu"
                 android:layout_marginLeft="20dp"
                 />
