--- a/app/src/main/res/layout/gameover.xml
+++ b/app/src/main/res/layout/gameover.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp">
             <TextView
-                android:id="@+id/label_score"
+                android:id="@+id/label_game_over"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
@@ -85,6 +85,7 @@
                 android:layout_height="40dp"/>
 
             <TextView
+                android:id="@+id/extra_life_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
@@ -112,13 +113,14 @@
                 android:background="@drawable/replay"/>
 
             <TextView
+                android:id="@+id/again_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
                 android:textColor="@color/whiteColor"
                 android:text="@string/label_btn_again"
                 android:layout_centerVertical="true"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@id/ico_replay"
                 android:layout_marginLeft="20dp"
                 />
@@ -139,13 +141,14 @@
                 android:background="@drawable/ico_menu"/>
 
             <TextView
+                android:id="@+id/menu_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/roof_runners_active"
                 android:textColor="@color/whiteColor"
                 android:text="@string/label_btn_menu"
                 android:layout_centerVertical="true"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:layout_toRightOf="@id/ico_menu"
                 android:layout_marginLeft="20dp"
                 />
