--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -81,7 +81,7 @@
             android:background="@drawable/eyes_bonus"/>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
@@ -91,7 +91,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/header"
         android:layout_above="@id/footer">
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <TextView
         android:id="@+id/label_footer"
